(Fix) Tatto explorer not showing when client user

--- a/sass/partials/_tattoo-explorer-main.scss
+++ b/sass/partials/_tattoo-explorer-main.scss
@@ -135,7 +135,7 @@
     margin: auto;
     padding: 0.5rem;
     width: 80%;
-    min-height: 90vh;
+    height: 90vh;
     border-radius: 0.5rem;
     display: grid;
     grid-template-columns: 1fr;
@@ -169,12 +169,12 @@
 
     .modal-card-content {
         background-color: #fefefe;
-        height: 100%;
         padding: 0.5rem;
         border-radius: 1rem;
 
         display: grid;
         grid-template-columns: .2fr .8fr;
+        column-gap: 1rem;
 
         .artist-bio-section{
             background-color: red;
@@ -186,6 +186,8 @@
 
             img {
                 border-radius: 0.5rem;
+                max-width: 100%;
+
             }
         }
     }
